# skl-app

./: Dockerfile  README.md  alembic.ini  database.db  docker-compose.yml  pyproject.toml
backend/: main.py
backend/business_logic/master/: user_logic.py
backend/core/: auth.py  config.py  db.py  security.py
backend/database/: connection.py
backend/entities/master/: resource.py  resource_role.py  role.py  user.py  user_information.py
backend/models/master/: user_model.py
backend/repositories/master/: user_repository.py
backend/routers/v1/: auth.py  auth_route.py
backend/routers/v1/master/: user_route.py
migrations/: base.py  env.py
migrations/versions/: aa1e0d1b6181_.py
