[tool.poetry]
name = "skl-app"
version = "0.1.0"
description = "Skeleton App"
authors = ["Bayu Satria G"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
sqlmodel = "^0.0.8"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
